seaqt/QtWebKitWidgets/gen_qwebview.h

class QAction;
class QIcon;
class QMetaObject;
class QNetworkRequest;
class QSize;
class QUrl;
class QVariant;
class QWebHistory;
class QWebPage;
class QWebSettings;
class QWebView;
class QWidget;
typedef struct QAction QAction;
typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QIcon QIcon;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMoveEvent QMoveEvent;
typedef struct QNetworkRequest QNetworkRequest;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QUrl QUrl;
typedef struct QVariant QVariant;
typedef struct QWebHistory QWebHistory;
typedef struct QWebPage QWebPage;
typedef struct QWebSettings QWebSettings;
typedef struct QWebView QWebView;
typedef struct QWidget QWidget;
bool QWebView_override_virtual_focusInEvent(void* self, intptr_t slot);
bool QWebView_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QWebView_virtualbase_focusOutEvent(void* self, QFocusEvent* param1);
bool QWebView_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QWebView_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QWebView_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QWebView_virtualbase_focusNextPrevChild(void* self, bool next);
bool QWebView_override_virtual_devType(void* self, intptr_t slot);
int QWebView_virtualbase_devType(const void* self);
bool QWebView_override_virtual_setVisible(void* self, intptr_t slot);
void QWebView_virtualbase_setVisible(void* self, bool visible);
bool QWebView_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QWebView_virtualbase_minimumSizeHint(const void* self);
bool QWebView_override_virtual_heightForWidth(void* self, intptr_t slot);
int QWebView_virtualbase_heightForWidth(const void* self, int param1);
bool QWebView_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QWebView_virtualbase_hasHeightForWidth(const void* self);
bool QWebView_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QWebView_virtualbase_paintEngine(const void* self);
bool QWebView_override_virtual_enterEvent(void* self, intptr_t slot);
void QWebView_virtualbase_enterEvent(void* self, QEvent* event);
bool QWebView_override_virtual_leaveEvent(void* self, intptr_t slot);
void QWebView_virtualbase_leaveEvent(void* self, QEvent* event);
bool QWebView_override_virtual_moveEvent(void* self, intptr_t slot);
void QWebView_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QWebView_override_virtual_closeEvent(void* self, intptr_t slot);
void QWebView_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QWebView_override_virtual_tabletEvent(void* self, intptr_t slot);
void QWebView_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QWebView_override_virtual_actionEvent(void* self, intptr_t slot);
void QWebView_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QWebView_override_virtual_showEvent(void* self, intptr_t slot);
void QWebView_virtualbase_showEvent(void* self, QShowEvent* event);
bool QWebView_override_virtual_hideEvent(void* self, intptr_t slot);
void QWebView_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QWebView_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QWebView_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, long* result);
bool QWebView_override_virtual_metric(void* self, intptr_t slot);
int QWebView_virtualbase_metric(const void* self, int param1);
bool QWebView_override_virtual_initPainter(void* self, intptr_t slot);
void QWebView_virtualbase_initPainter(const void* self, QPainter* painter);
bool QWebView_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QWebView_virtualbase_redirected(const void* self, QPoint* offset);
bool QWebView_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QWebView_virtualbase_sharedPainter(const void* self);
bool QWebView_override_virtual_eventFilter(void* self, intptr_t slot);
bool QWebView_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QWebView_override_virtual_timerEvent(void* self, intptr_t slot);
void QWebView_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QWebView_override_virtual_childEvent(void* self, intptr_t slot);
void QWebView_virtualbase_childEvent(void* self, QChildEvent* event);
bool QWebView_override_virtual_customEvent(void* self, intptr_t slot);
void QWebView_virtualbase_customEvent(void* self, QEvent* event);
bool QWebView_override_virtual_connectNotify(void* self, intptr_t slot);
void QWebView_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QWebView_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QWebView_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QWebView_delete(QWebView* self);