seaqt/QtWebKitWidgets/gen_qwebview.nim

proc fcQWebView_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_focusInEvent".}
proc fQWebView_virtualbase_focusOutEvent(self: pointer, param1: pointer): void{.importc: "QWebView_virtualbase_focusOutEvent".}
proc fcQWebView_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_focusOutEvent".}
proc fQWebView_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QWebView_virtualbase_inputMethodEvent".}
proc fcQWebView_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_inputMethodEvent".}
proc fQWebView_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QWebView_virtualbase_focusNextPrevChild".}
proc fcQWebView_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QWebView_override_virtual_focusNextPrevChild".}
proc fQWebView_virtualbase_devType(self: pointer, ): cint{.importc: "QWebView_virtualbase_devType".}
proc fcQWebView_override_virtual_devType(self: pointer, slot: int) {.importc: "QWebView_override_virtual_devType".}
proc fQWebView_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QWebView_virtualbase_setVisible".}
proc fcQWebView_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QWebView_override_virtual_setVisible".}
proc fQWebView_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QWebView_virtualbase_minimumSizeHint".}
proc fcQWebView_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QWebView_override_virtual_minimumSizeHint".}
proc fQWebView_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QWebView_virtualbase_heightForWidth".}
proc fcQWebView_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QWebView_override_virtual_heightForWidth".}
proc fQWebView_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QWebView_virtualbase_hasHeightForWidth".}
proc fcQWebView_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QWebView_override_virtual_hasHeightForWidth".}
proc fQWebView_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QWebView_virtualbase_paintEngine".}
proc fcQWebView_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QWebView_override_virtual_paintEngine".}
proc fQWebView_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QWebView_virtualbase_enterEvent".}
proc fcQWebView_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_enterEvent".}
proc fQWebView_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QWebView_virtualbase_leaveEvent".}
proc fcQWebView_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_leaveEvent".}
proc fQWebView_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QWebView_virtualbase_moveEvent".}
proc fcQWebView_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_moveEvent".}
proc fQWebView_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QWebView_virtualbase_closeEvent".}
proc fcQWebView_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_closeEvent".}
proc fQWebView_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QWebView_virtualbase_tabletEvent".}
proc fcQWebView_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_tabletEvent".}
proc fQWebView_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QWebView_virtualbase_actionEvent".}
proc fcQWebView_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_actionEvent".}
proc fQWebView_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QWebView_virtualbase_showEvent".}
proc fcQWebView_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_showEvent".}
proc fQWebView_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QWebView_virtualbase_hideEvent".}
proc fcQWebView_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_hideEvent".}
proc fQWebView_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool{.importc: "QWebView_virtualbase_nativeEvent".}
proc fcQWebView_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_nativeEvent".}
proc fQWebView_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QWebView_virtualbase_metric".}
proc fcQWebView_override_virtual_metric(self: pointer, slot: int) {.importc: "QWebView_override_virtual_metric".}
proc fQWebView_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QWebView_virtualbase_initPainter".}
proc fcQWebView_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QWebView_override_virtual_initPainter".}
proc fQWebView_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QWebView_virtualbase_redirected".}
proc fcQWebView_override_virtual_redirected(self: pointer, slot: int) {.importc: "QWebView_override_virtual_redirected".}
proc fQWebView_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QWebView_virtualbase_sharedPainter".}
proc fcQWebView_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QWebView_override_virtual_sharedPainter".}
proc fQWebView_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QWebView_virtualbase_eventFilter".}
proc fcQWebView_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QWebView_override_virtual_eventFilter".}
proc fQWebView_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QWebView_virtualbase_timerEvent".}
proc fcQWebView_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_timerEvent".}
proc fQWebView_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QWebView_virtualbase_childEvent".}
proc fcQWebView_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_childEvent".}
proc fQWebView_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QWebView_virtualbase_customEvent".}
proc fcQWebView_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_customEvent".}
proc fQWebView_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QWebView_virtualbase_connectNotify".}
proc fcQWebView_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QWebView_override_virtual_connectNotify".}
proc fQWebView_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QWebView_virtualbase_disconnectNotify".}
proc fcQWebView_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QWebView_override_virtual_disconnectNotify".}
proc fcQWebView_delete(self: pointer) {.importc: "QWebView_delete".}


func init*(T: type gen_qwebview_types.QWebView, h: ptr cQWebView): gen_qwebview_types.QWebView =
  T(h: h)
proc create*(T: type gen_qwebview_types.QWebView, parent: gen_qwidget_types.QWidget): gen_qwebview_types.QWebView =
  gen_qwebview_types.QWebView.init(fcQWebView_new(parent.h))

proc create*(T: type gen_qwebview_types.QWebView, ): gen_qwebview_types.QWebView =
  gen_qwebview_types.QWebView.init(fcQWebView_new2())

proc metaObject*(self: gen_qwebview_types.QWebView, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQWebView_metaObject(self.h))

proc metacast*(self: gen_qwebview_types.QWebView, param1: cstring): pointer =
  fcQWebView_metacast(self.h, param1)

proc tr*(_: type gen_qwebview_types.QWebView, s: cstring): string =
  let v_ms = fcQWebView_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qwebview_types.QWebView, s: cstring): string =
  let v_ms = fcQWebView_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc page*(self: gen_qwebview_types.QWebView, ): gen_qwebpage_types.QWebPage =
  gen_qwebpage_types.QWebPage(h: fcQWebView_page(self.h))

proc setPage*(self: gen_qwebview_types.QWebView, page: gen_qwebpage_types.QWebPage): void =
  fcQWebView_setPage(self.h, page.h)

proc load*(self: gen_qwebview_types.QWebView, url: gen_qurl_types.QUrl): void =
  fcQWebView_load(self.h, url.h)

proc load*(self: gen_qwebview_types.QWebView, request: gen_qnetworkrequest_types.QNetworkRequest): void =
  fcQWebView_loadWithRequest(self.h, request.h)

proc setHtml*(self: gen_qwebview_types.QWebView, html: string): void =
  fcQWebView_setHtml(self.h, struct_miqt_string(data: html, len: csize_t(len(html))))

proc setContent*(self: gen_qwebview_types.QWebView, data: seq[byte]): void =
  fcQWebView_setContent(self.h, struct_miqt_string(data: cast[cstring](if len(data) == 0: nil else: unsafeAddr data[0]), len: csize_t(len(data))))

proc history*(self: gen_qwebview_types.QWebView, ): gen_qwebhistory_types.QWebHistory =
  gen_qwebhistory_types.QWebHistory(h: fcQWebView_history(self.h))

proc settings*(self: gen_qwebview_types.QWebView, ): gen_qwebsettings_types.QWebSettings =
  gen_qwebsettings_types.QWebSettings(h: fcQWebView_settings(self.h))

proc title*(self: gen_qwebview_types.QWebView, ): string =
  let v_ms = fcQWebView_title(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setUrl*(self: gen_qwebview_types.QWebView, url: gen_qurl_types.QUrl): void =
  fcQWebView_setUrl(self.h, url.h)

proc url*(self: gen_qwebview_types.QWebView, ): gen_qurl_types.QUrl =
  gen_qurl_types.QUrl(h: fcQWebView_url(self.h))

proc icon*(self: gen_qwebview_types.QWebView, ): gen_qicon_types.QIcon =
  gen_qicon_types.QIcon(h: fcQWebView_icon(self.h))

proc hasSelection*(self: gen_qwebview_types.QWebView, ): bool =
  fcQWebView_hasSelection(self.h)

proc selectedText*(self: gen_qwebview_types.QWebView, ): string =
  let v_ms = fcQWebView_selectedText(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc selectedHtml*(self: gen_qwebview_types.QWebView, ): string =
  let v_ms = fcQWebView_selectedHtml(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc pageAction*(self: gen_qwebview_types.QWebView, action: cint): gen_qaction_types.QAction =
  gen_qaction_types.QAction(h: fcQWebView_pageAction(self.h, cint(action)))

proc triggerPageAction*(self: gen_qwebview_types.QWebView, action: cint): void =
  fcQWebView_triggerPageAction(self.h, cint(action))

proc isModified*(self: gen_qwebview_types.QWebView, ): bool =
  fcQWebView_isModified(self.h)

proc inputMethodQuery*(self: gen_qwebview_types.QWebView, property: cint): gen_qvariant_types.QVariant =
  gen_qvariant_types.QVariant(h: fcQWebView_inputMethodQuery(self.h, cint(property)))

proc sizeHint*(self: gen_qwebview_types.QWebView, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQWebView_sizeHint(self.h))

proc zoomFactor*(self: gen_qwebview_types.QWebView, ): float64 =
  fcQWebView_zoomFactor(self.h)

proc setZoomFactor*(self: gen_qwebview_types.QWebView, factor: float64): void =
  fcQWebView_setZoomFactor(self.h, factor)

proc setTextSizeMultiplier*(self: gen_qwebview_types.QWebView, factor: float64): void =
  fcQWebView_setTextSizeMultiplier(self.h, factor)

proc textSizeMultiplier*(self: gen_qwebview_types.QWebView, ): float64 =
  fcQWebView_textSizeMultiplier(self.h)

proc renderHints*(self: gen_qwebview_types.QWebView, ): cint =
  cint(fcQWebView_renderHints(self.h))
